fix style on mobile

--- a/src/app/components/mobile-menu/mobile-menu.module.css
+++ b/src/app/components/mobile-menu/mobile-menu.module.css
@@ -34,3 +34,9 @@
   visibility: visible;
   transform: scale(1);
 }
+
+.nav_container {
+  max-height: 80vh;
+  overflow-y: auto;
+  width: 100vw;
+}
