--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -48,9 +48,6 @@
 }
 
 @media (max-width: 1024px) {
-  .home {
-    min-height: calc(90vh - 100px);
-  }
   .home__content {
     min-height: calc(100vh - 50px);
     gap: var(--gap-large);
